[project]
name = "mrover"
version = "2024.0.0"
description = "MRover Python Code"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.md" }
maintainers = [
    { name = "Michigan Mars Rover Team" }
]
dependencies = [
    # ROS dependencies
    "rospkg==1.5.0",
    "netifaces==0.11.0",
    "defusedxml==0.7.1",
    # MRover dependencies
    "Django==4.2.7",
    "empy==3.3.4",
    "numpy==1.26.0",
    "pandas==2.2.0",
    "shapely==2.0.1",
    "pyserial==3.5",
    "moteus==0.3.59",
    "pymap3d==3.0.1",
    "aenum==3.1.15",
    "daphne==4.0.0",
    "channels==4.0.0",
]

[project.optional-dependencies]
dev = [
    "black==23.9.1",
    "mypy==1.5.1",
]

[project.urls]
"Homepage" = "https://mrover.org"

[build-system]
requires = ["setuptools", "rospkg"]

[tool.black]
line-length = 120
