[project]
name = "mrover"
version = "2024.0.0"
description = "MRover Python Code"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
maintainers = [
    { name = "Michigan Mars Rover Team" }
]
dependencies = [
    # ROS dependencies
    "rospkg==1.5.0",
    "netifaces==0.11.0",
    "defusedxml==0.7.1",
    # MRover dependencies
    "pyyaml==6.0.1",
    "Django==5.0.6",
    "numpy==1.26.4",
    "scipy==1.13.0",
    "shapely==2.0.1",
    "pyserial==3.5",
    "moteus==0.3.69",
    "pymap3d==3.0.1",
    "daphne==4.0.0",
    "channels==4.0.0",
    "pyubx2==1.2.35",
]

[project.optional-dependencies]
dev = [
    # If you update these, be sure to update the correspondig version checkers in style.sh
    "black==23.9.1",
    "mypy==1.10.0",
]

[project.urls]
"Homepage" = "https://mrover.org"

[build-system]
requires = ["setuptools", "rospkg"]

[tool.black]
line-length = 120
